feat: add change language footer

--- a/src/UI/footer/assets/locales/ru/translation.json
+++ b/src/UI/footer/assets/locales/ru/translation.json
@@ -15,7 +15,7 @@
         "list": ["наши контакты", "наш канал", "instagram", "telegram"]
       },
       {
-        "title": "faq",
+        "title": "FAQ",
         "list": ["оплата", "дени месяца", "рабочее время", "больше"]
       }
     ]
