--- a/src/UI/footer/assets/locales/en/translation.json
+++ b/src/UI/footer/assets/locales/en/translation.json
@@ -15,7 +15,7 @@
         "list": ["contact us", "our channel", "instagram", "telegram"]
       },
       {
-        "title": "faq",
+        "title": "FAQ",
         "list": ["payment", "monthly day", "work time", "more"]
       }
     ]
