--- a/src/pages/main/assets/locales/ru/translation.json
+++ b/src/pages/main/assets/locales/ru/translation.json
@@ -1,28 +1,4 @@
 {
-  "header": {
-    "navigation": ["домой", "магазин", "приложение", "блог", "контакты"]
-  },
-  "footer": {
-    "description": "Привет, это действительно боль, за которой нужно следовать. Изобретатель ненависти к мягкости удовольствия?",
-    "sections": [
-      {
-        "title": "о нас",
-        "list": ["о нас", "блог", "контакты", "как работать"]
-      },
-      {
-        "title": "услуги",
-        "list": ["как работать", "работа", "цены"]
-      },
-      {
-        "title": "поддержка",
-        "list": ["наши контакты", "наш канал", "instagram", "telegram"]
-      },
-      {
-        "title": "faq",
-        "list": ["оплата", "дени месяца", "рабочее время", "больше"]
-      }
-    ]
-  },
   "main": {
     "hero": {
       "header": [
@@ -63,8 +39,14 @@
       "header": "о нашем тренажерном зале",
       "description": "Сама компания очень успешная. Свободен, малыш? Потому что они как бы не знают, что дело истины, когда нужно отвергнуть самое маленькое, есть времена, когда отвергающие ничего не избегают?",
       "cards": [
-        { "title": "клиент очень доволен" },
-        { "title": "клиент очень доволен" }
+        {
+          "title": "клиент очень доволен",
+          "description": "Сама компания очень успешная."
+        },
+        {
+          "title": "клиент очень доволен",
+          "description": "Сама компания очень успешная."
+        }
       ]
     },
     "coaches": {
@@ -82,7 +64,11 @@
             "Но ослепленный, он ненавидит обвинителей",
             "пусть бежит с вожделением, да будет пойман",
             "наш трудолюбивый тот"
-          ]
+          ],
+          "price": {
+            "month": 120,
+            "yaer": 1200
+          }
         },
         {
           "title": "open gym",
@@ -91,7 +77,11 @@
             "Но ослепленный, он ненавидит обвинителей",
             "пусть бежит с вожделением, да будет пойман",
             "наш трудолюбивый тот"
-          ]
+          ],
+          "price": {
+            "month": 109,
+            "yaer": 1090
+          }
         },
         {
           "title": "stretching",
@@ -100,7 +90,11 @@
             "Но ослепленный, он ненавидит обвинителей",
             "пусть бежит с вожделением, да будет пойман",
             "наш трудолюбивый тот"
-          ]
+          ],
+          "price": {
+            "month": 80,
+            "yaer": 800
+          }
         },
         {
           "title": "powerlifting",
@@ -109,13 +103,39 @@
             "Но ослепленный, он ненавидит обвинителей",
             "пусть бежит с вожделением, да будет пойман",
             "наш трудолюбивый тот"
-          ]
+          ],
+          "price": {
+            "month": 100,
+            "yaer": 1000
+          }
         }
       ],
       "button": "купить сейчас"
     },
     "reviews": {
-      "header": "отзывы от клиентов"
+      "header": "отзывы от клиентов",
+      "cards": [
+        {
+          "user": "джон уик",
+          "status": "клиент",
+          "review": "Сама компания очень успешная. Ибо таким же образом я объясню их, отвергая их"
+        },
+        {
+          "user": "доминик торетто",
+          "status": "клиент",
+          "review": "Сама компания очень успешная. Ибо таким же образом я объясню их, отвергая их"
+        },
+        {
+          "user": "дуэйн джонсон",
+          "status": "тренер",
+          "review": "Сама компания очень успешная. Ибо таким же образом я объясню их, отвергая их"
+        },
+        {
+          "user": "майкл скотт",
+          "status": "клиент",
+          "review": "Сама компания очень успешная. Ибо таким же образом я объясню их, отвергая их"
+        }
+      ]
     },
     "trial": {
       "header": "Запишись на первое посещение",
