feat: add change language and theme in section news

--- a/src/pages/main/assets/locales/ru/translation.json
+++ b/src/pages/main/assets/locales/ru/translation.json
@@ -137,6 +137,11 @@
         }
       ]
     },
+    "news": {
+      "header": "блог & новости",
+      "decription": "Правда в том, что это боль, за ней вскоре последует ожирение. Что касается тела и выбора их, ошибка пути развращает его офисами",
+      "button": "читать далее"
+    },
     "trial": {
       "header": "Запишись на первое посещение",
       "decription": "Сама компания очень успешная. Так как удовольствия, сами страдания, никто не любит терпеть",
