--- a/src/pages/main/assets/locales/en/translation.json
+++ b/src/pages/main/assets/locales/en/translation.json
@@ -161,6 +161,11 @@
         }
       ]
     },
+    "news": {
+      "header": "blog & news",
+      "decription": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae corporis, earum autem eligendi, modi error eum corrupti officiis",
+      "button": "read more"
+    },
     "trial": {
       "header": "reviews from clientsget your first trial visit",
       "decription": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptates, ipsam dolorum ipsa, placeat perferendis nemo",
