--- a/src/pages/main/assets/locales/ru/translation.json
+++ b/src/pages/main/assets/locales/ru/translation.json
@@ -145,7 +145,7 @@
     "trial": {
       "header": "Запишись на первое посещение",
       "decription": "Сама компания очень успешная. Так как удовольствия, сами страдания, никто не любит терпеть",
-      "button": "отправить"
+      "link": "регистрация"
     }
   }
 }
