--- a/src/UI/footer/assets/locales/en/translation.json
+++ b/src/UI/footer/assets/locales/en/translation.json
@@ -1,23 +1,6 @@
 {
   "footer": {
     "description": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore odio mollitia voluptate?",
-    "sections": [
-      {
-        "title": "about",
-        "list": ["about us", "blog", "contact", "how to work"]
-      },
-      {
-        "title": "services",
-        "list": ["how to work", "work", "price"]
-      },
-      {
-        "title": "support",
-        "list": ["contact us", "our channel", "instagram", "telegram"]
-      },
-      {
-        "title": "FAQ",
-        "list": ["payment", "monthly day", "work time", "more"]
-      }
-    ]
+    "city": "Togliatti"
   }
 }
